@@ -107,9 +107,9 @@ sub patch
     my ($fullpath, $prefix, $base) = ($1, $2, $4);
 
     my $previousRevision = 0;
-	if($patch =~ /\n--- .+\(revision (\d+)\)\n/) { 
-	    $previousRevision = $1;
-	}
+        if($patch =~ /\n--- .+\(revision (\d+)\)\n/) { 
+            $previousRevision = $1;
+        }
 
     if ($previousRevision != 0 || $patch !~ /\ndiff -N/) {
         # Standard patch, patch tool can handle this.
